hints/yaml/challenge-istio/circuitbreaker/c2-httpbin-client.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: fortio-deploy
  namespace: challengeistio
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: fortio
    spec:
      containers:
      - name: fortio
        image: istio/fortio:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-fortio
        - containerPort: 8079
          name: grpc-ping
